nml.g4
grammar nml;

json: rootobj value;

rootobj: 'root' obj;

obj: '{' pair (',' pair)* '}' | '{' '}';

pair: KEY value;

array: '[' value (',' value)* ']' | '[' ']';

value: STRING
	 | NUMBER
	 | obj
	 | array
	 | 'true'
	 | 'false'
	 | 'null';


KEY: (ESC | SAFECODEPOINT)* ' ';

STRING: '"' (ESC | SAFECODEPOINT)* '"';

fragment ESC: '\\' (["\\/bfnrt] | UNICODE);

fragment UNICODE: 'u' HEX HEX HEX HEX;

fragment HEX: [0-9a-fA-F];

fragment SAFECODEPOINT: ~ ["\\\u0000-\u001F];

NUMBER: '-'? INT ('.' [0-9]+)? EXP?;

fragment INT: '0' | [1-9] [0-9]*;

fragment EXP: [Ee] [+\-]? INT;

WS: [ \t\n\r]+ -> skip;
